# order-by-scale

./: .env.example  .gitignore  README.md  THEOS_nb_2025_08_13.py  data.ipynb  data.py  embed_abl.md  grid_search.py  interp.ipynb  interp.py  interp_main.ipynb  interp_main.py  interp_old.py  list_comp OLD.ipynb  list_comp.ipynb  main.ipynb  main.py  model_utils.py  part5_Grokking_and_Modular_Arithmetic_(exercises).ipynb  pyproject.toml  requirements.txt  train wandb.py  train.ipynb  train.py
PAPER/: data.py  fixed_attention_perfs.pkl  grid_search.py  main.ipynb  nb_final.ipynb
data/: listlen2_digits100_dupes.pt  listlen2_digits100_dupes_traindupesonly.pt  listlen2_digits100_nodupes.pt  listlen2_digits10_dupes.pt  listlen2_digits10_nodupes.pt
models/: 100dig_8d.pt  2layer_100dig_32d.pt  2layer_100dig_64d.pt  3layer_100dig_64d.pt  TEST-1layer.pt  model-notes.txt  v1_100dig_32d_LNandBias_WO.pt  v1_3layer_100dig_8d.pt  v1_len2_OLDdesign_10dig_16d.pt  v2_10dig_8d.pt  v2_3layer_100dig_128d.pt  v2_3layer_100dig_16d.pt  v2_len2_100dig_8d.pt  v3_2layer_100dig_128d.pt  v3_3layer_100dig_16d_NoDupes.pt  v3_len2_10dig_8d.pt  v4.2_len2_10dig_16d.pt  v4.3_len2_10dig_16d.pt  v4_len2_10dig_16d(1).pt  v4_len2_10dig_16d.pt  v5_100dig_32d_FreezeWO_LNNoBias.pt  v5_v4andWeightDecay.pt  v6_len2_100dig_16d.pt  v7_len2_100dig_8d_FreezeWO.pt  v8_len2_100dig_16d_FreezeWO.pt  v8_len2_100dig_8d_NoLNNoBias.pt
old_models/: 2layer_100dig_4d_20251015-161412.pt
patrick/: THEOS_nb_2025_08_13.py  fixed_attention_perfs.pkl  grid_search.py  grid_search.sbatch  nb_2025_08_12.py  nb_2025_08_13.py  (+3 more)
(+11 files in other folders)
