[project]
name = "order-by-scale"
version = "0.2.0"
description = "Relative-magnitude relational composition in an attention-only transformer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mechanistic-interpretability", "transformers", "circuit-analysis", "causal-interventions", "ai-safety"]
authors = [
    { name = "Theo Farrell", email = "theo.farrell99@outlook.com"},
    { name = "Patrick Leask" },
    { name = "Noura Al Moubayed" },
]
maintainers = [
    { name = "Theo Farrell", email = "theo.farrell99@outlook.com"},
]
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.16.1",
    "wandb>=0.18.0",
]

[project.urls]
Paper = "https://openreview.net/forum?id=vWRVzNtk7W"
Repository = "https://github.com/Theosdoor/order-by-scale"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
